[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/newspaper_headline.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/newspaper_date.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/newspaper_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://game_entities/newspaper/Newspaper.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.0862745, 0.101961, 1 )

[node name="Newspaper" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 720 )
rect_pivot_offset = Vector2( 640, 360 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 720 )
mouse_filter = 2
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContent" type="VBoxContainer" parent="Paper"]
margin_right = 1280.0
margin_bottom = 190.0
rect_min_size = Vector2( 1280, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Paper/TitleContent"]
margin_right = 1280.0
margin_bottom = 5.0
rect_min_size = Vector2( 1280, 5 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Paper/TitleContent"]
margin_top = 9.0
margin_right = 1280.0
margin_bottom = 100.0
rect_min_size = Vector2( 1280, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The Old and Stale"
align = 1

[node name="Date" type="Label" parent="Paper/TitleContent"]
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 120.0
rect_min_size = Vector2( 1280, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Brown Tuesday!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Paper/TitleContent"]
margin_top = 124.0
margin_right = 1280.0
margin_bottom = 125.0
rect_min_size = Vector2( 1280, 1 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Paper/TitleContent"]
margin_top = 129.0
margin_right = 1280.0
margin_bottom = 129.0
rect_min_size = Vector2( 1280, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Paper/TitleContent"]
margin_top = 133.0
margin_right = 1280.0
margin_bottom = 134.0
rect_min_size = Vector2( 1280, 1 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Headline" type="Label" parent="Paper/TitleContent"]
margin_top = 138.0
margin_right = 1280.0
margin_bottom = 199.0
rect_min_size = Vector2( 1280, 0 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SOMETHING TERRIBLE HAS HAPPENED!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaperContent" type="HBoxContainer" parent="Paper"]
margin_top = 198.0
margin_right = 1288.0
margin_bottom = 918.0
rect_min_size = Vector2( 1280, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="HBoxContainer" parent="Paper/PaperContent"]
margin_right = 320.0
margin_bottom = 720.0
rect_min_size = Vector2( 320, 720 )
custom_constants/separation = 0
alignment = 1

[node name="Text" type="VBoxContainer" parent="Paper/PaperContent/Column"]
margin_left = 35.0
margin_right = 285.0
margin_bottom = 720.0
rect_min_size = Vector2( 250, 520 )

[node name="ColorRect" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect2" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 44.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect3" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 48.0
margin_right = 250.0
margin_bottom = 68.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect4" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 72.0
margin_right = 250.0
margin_bottom = 92.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect5" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 96.0
margin_right = 250.0
margin_bottom = 116.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect6" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 120.0
margin_right = 250.0
margin_bottom = 140.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect7" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 144.0
margin_right = 250.0
margin_bottom = 164.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect8" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 168.0
margin_right = 250.0
margin_bottom = 188.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect9" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 192.0
margin_right = 250.0
margin_bottom = 212.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect10" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 216.0
margin_right = 250.0
margin_bottom = 236.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect11" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 240.0
margin_right = 250.0
margin_bottom = 260.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect12" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 264.0
margin_right = 250.0
margin_bottom = 284.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect13" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 288.0
margin_right = 250.0
margin_bottom = 308.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect14" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 312.0
margin_right = 250.0
margin_bottom = 332.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect15" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 336.0
margin_right = 250.0
margin_bottom = 356.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect16" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 360.0
margin_right = 250.0
margin_bottom = 380.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect17" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 384.0
margin_right = 250.0
margin_bottom = 404.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect18" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 408.0
margin_right = 250.0
margin_bottom = 428.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect19" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 432.0
margin_right = 250.0
margin_bottom = 452.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect20" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 456.0
margin_right = 250.0
margin_bottom = 476.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect21" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 480.0
margin_right = 250.0
margin_bottom = 500.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect22" type="ColorRect" parent="Paper/PaperContent/Column/Text"]
margin_top = 504.0
margin_right = 250.0
margin_bottom = 524.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="Center" type="VBoxContainer" parent="Paper/PaperContent"]
margin_left = 324.0
margin_right = 964.0
margin_bottom = 720.0
rect_min_size = Vector2( 640, 0 )
custom_constants/separation = 0

[node name="PhotoFrame" type="Panel" parent="Paper/PaperContent/Center"]
margin_right = 640.0
margin_bottom = 320.0
rect_min_size = Vector2( 640, 320 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Photo" type="TextureRect" parent="Paper/PaperContent/Center/PhotoFrame"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 640, 320 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Paper/PaperContent/Center"]
margin_top = 320.0
margin_right = 640.0
margin_bottom = 330.0
rect_min_size = Vector2( 0, 10 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterColumns" type="HBoxContainer" parent="Paper/PaperContent/Center"]
margin_top = 330.0
margin_right = 640.0
margin_bottom = 530.0
rect_min_size = Vector2( 640, 0 )
mouse_filter = 2
custom_constants/separation = 0

[node name="Column2" type="HBoxContainer" parent="Paper/PaperContent/Center/CenterColumns"]
margin_right = 320.0
margin_bottom = 200.0
rect_min_size = Vector2( 320, 200 )
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="Text" type="VBoxContainer" parent="Paper/PaperContent/Center/CenterColumns/Column2"]
margin_left = 35.0
margin_right = 285.0
margin_bottom = 200.0
rect_min_size = Vector2( 250, 200 )
mouse_filter = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column2/Text"]
margin_top = 6.0
margin_right = 250.0
margin_bottom = 26.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect2" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column2/Text"]
margin_top = 30.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect3" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column2/Text"]
margin_top = 54.0
margin_right = 250.0
margin_bottom = 74.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect4" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column2/Text"]
margin_top = 78.0
margin_right = 250.0
margin_bottom = 98.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect5" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column2/Text"]
margin_top = 102.0
margin_right = 250.0
margin_bottom = 122.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect6" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column2/Text"]
margin_top = 126.0
margin_right = 250.0
margin_bottom = 146.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect7" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column2/Text"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect8" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column2/Text"]
margin_top = 174.0
margin_right = 250.0
margin_bottom = 194.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="Column3" type="HBoxContainer" parent="Paper/PaperContent/Center/CenterColumns"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 200.0
rect_min_size = Vector2( 320, 200 )
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="Text" type="VBoxContainer" parent="Paper/PaperContent/Center/CenterColumns/Column3"]
margin_left = 35.0
margin_right = 285.0
margin_bottom = 200.0
rect_min_size = Vector2( 250, 200 )
mouse_filter = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column3/Text"]
margin_top = 6.0
margin_right = 250.0
margin_bottom = 26.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect2" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column3/Text"]
margin_top = 30.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect3" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column3/Text"]
margin_top = 54.0
margin_right = 250.0
margin_bottom = 74.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect4" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column3/Text"]
margin_top = 78.0
margin_right = 250.0
margin_bottom = 98.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect5" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column3/Text"]
margin_top = 102.0
margin_right = 250.0
margin_bottom = 122.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect6" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column3/Text"]
margin_top = 126.0
margin_right = 250.0
margin_bottom = 146.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect7" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column3/Text"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect8" type="ColorRect" parent="Paper/PaperContent/Center/CenterColumns/Column3/Text"]
margin_top = 174.0
margin_right = 250.0
margin_bottom = 194.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="Column4" type="HBoxContainer" parent="Paper/PaperContent"]
margin_left = 968.0
margin_right = 1288.0
margin_bottom = 720.0
rect_min_size = Vector2( 320, 720 )
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Paper/PaperContent/Column4"]
margin_right = 35.0
margin_bottom = 720.0
rect_min_size = Vector2( 35, 0 )

[node name="Text" type="VBoxContainer" parent="Paper/PaperContent/Column4"]
margin_left = 35.0
margin_right = 285.0
margin_bottom = 720.0
rect_min_size = Vector2( 250, 520 )

[node name="ColorRect" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect2" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 44.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect3" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 48.0
margin_right = 250.0
margin_bottom = 68.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect4" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 72.0
margin_right = 250.0
margin_bottom = 92.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect5" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 96.0
margin_right = 250.0
margin_bottom = 116.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect6" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 120.0
margin_right = 250.0
margin_bottom = 140.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect7" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 144.0
margin_right = 250.0
margin_bottom = 164.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect8" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 168.0
margin_right = 250.0
margin_bottom = 188.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect9" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 192.0
margin_right = 250.0
margin_bottom = 212.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect10" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 216.0
margin_right = 250.0
margin_bottom = 236.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect11" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 240.0
margin_right = 250.0
margin_bottom = 260.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect12" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 264.0
margin_right = 250.0
margin_bottom = 284.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect13" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 288.0
margin_right = 250.0
margin_bottom = 308.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect14" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 312.0
margin_right = 250.0
margin_bottom = 332.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect15" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 336.0
margin_right = 250.0
margin_bottom = 356.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect16" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 360.0
margin_right = 250.0
margin_bottom = 380.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect17" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 384.0
margin_right = 250.0
margin_bottom = 404.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect18" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 408.0
margin_right = 250.0
margin_bottom = 428.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect19" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 432.0
margin_right = 250.0
margin_bottom = 452.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect20" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 456.0
margin_right = 250.0
margin_bottom = 476.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect21" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 480.0
margin_right = 250.0
margin_bottom = 500.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="ColorRect22" type="ColorRect" parent="Paper/PaperContent/Column4/Text"]
margin_top = 504.0
margin_right = 250.0
margin_bottom = 524.0
rect_min_size = Vector2( 250, 20 )
mouse_filter = 2
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="Paper/PaperContent/Column4"]
margin_left = 285.0
margin_right = 320.0
margin_bottom = 720.0
rect_min_size = Vector2( 35, 0 )
